ajustes product service delete cors