@@ -6,7 +6,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
@@ -15,25 +15,22 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Origen permitido
-        config.setAllowedOrigins(Arrays.asList("http://localhost:5173", "https://8080-old-forest-22658171.in-ws1.runcode.io"));
-
+        // Permitir solo un origen explícito
+        config.setAllowedOrigins(List.of("http://localhost:5173", "https://8080-old-forest-22658171.in-ws1.runcode.io"));
+        
         // Métodos permitidos
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        
         // Encabezados permitidos
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-
+        config.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        
         // Permitir credenciales
         config.setAllowCredentials(true);
-
-        // Permitir encabezados adicionales en la respuesta
-        config.addExposedHeader("Access-Control-Allow-Origin");
-
-        // Configurar el origen basado en las rutas
+        
+        // Registrar la configuración global
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // Aplica a todas las rutas
-
+        source.registerCorsConfiguration("/**", config);
+        
         return new CorsFilter(source);
     }
 }
